RESOLVED FIXED230355
ASSERTION FAILED: nsData under DataURLResourceMediaLoader::DataURLResourceMediaLoader()
https://bugs.webkit.org/show_bug.cgi?id=230355
Summary ASSERTION FAILED: nsData under DataURLResourceMediaLoader::DataURLResourceMed...
Chris Dumez
Reported 2021-09-16 09:29:30 PDT
ASSERTION FAILED: nsData under DataURLResourceMediaLoader::DataURLResourceMediaLoader(): Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x1284f1d6e WTFCrash 1 com.apple.WebCore 0x10eefc918 WTFCrashWithInfo(int, char const*, char const*, int) 2 com.apple.WebCore 0x113e70036 WebCore::DataURLResourceMediaLoader::DataURLResourceMediaLoader(WebCore::WebCoreAVFResourceLoader&, WebCore::ResourceRequest&&) 3 com.apple.WebCore 0x113e70492 WebCore::DataURLResourceMediaLoader::DataURLResourceMediaLoader(WebCore::WebCoreAVFResourceLoader&, WebCore::ResourceRequest&&) 4 com.apple.WebCore 0x113e72d2c std::1::unique_if<WebCore::DataURLResourceMediaLoader>::__unique_single std::__1::make_unique<WebCore::DataURLResourceMediaLoader, WebCore::WebCoreAVFResourceLoader&, WebCore::ResourceRequest>(WebCore::WebCoreAVFResourceLoader&, WebCore::ResourceRequest&&) 5 com.apple.WebCore 0x113e715f2 decltype(auto) WTF::makeUnique<WebCore::DataURLResourceMediaLoader, WebCore::WebCoreAVFResourceLoader&, WebCore::ResourceRequest>(WebCore::WebCoreAVFResourceLoader&, WebCore::ResourceRequest&&) 6 com.apple.WebCore 0x113e70ef4 WebCore::WebCoreAVFResourceLoader::startLoading() 7 com.apple.WebCore 0x10f2d086e WebCore::MediaPlayerPrivateAVFoundationObjC::shouldWaitForLoadingOfResource(AVAssetResourceLoadingRequest*) 8 com.apple.WebCore 0x10f319480 -[WebCoreAVFLoaderDelegate resourceLoader:shouldWaitForLoadingOfRequestedResource:]::$_17::operator()()::'lambda'()::operator()() const 9 com.apple.WebCore 0x10f319346 WTF::Detail::CallableWrapper<-[WebCoreAVFLoaderDelegate resourceLoader:shouldWaitForLoadingOfRequestedResource:]::$_17::operator()()::'lambda'(), void>::call() 10 com.apple.JavaScriptCore 0x12851b040 WTF::Function<void ()>::operator()() const 11 com.apple.JavaScriptCore 0x12859897c WTF::RunLoop::performWork() 12 com.apple.JavaScriptCore 0x12859c24c WTF::RunLoop::performWork(void*)
Attachments
Patch (3.30 KB, patch)
2021-09-16 09:32 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-09-16 09:29:49 PDT
Chris Dumez
Comment 2 2021-09-16 09:32:19 PDT
Eric Carlson
Comment 3 2021-09-16 10:56:11 PDT
Comment on attachment 438357 [details] Patch r=me
EWS
Comment 4 2021-09-16 15:29:04 PDT
Committed r282609 (241769@main): <https://commits.webkit.org/241769@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 438357 [details].
Note You need to log in before you can comment on or make changes to this bug.