ASSERTION FAILED: nsData under DataURLResourceMediaLoader::DataURLResourceMediaLoader() https://bugs.webkit.org/show_bug.cgi?id=230355 <rdar://82980375>

Reviewed by Eric Carlson.

Port DataURLResourceMediaLoader to use WebKit's DataURLDecoder instead of relying on
NSData to do so. Also, add data url decoding failure handling instead of crashing in
debug with an assertion.

No new tests, covered by existing tests.

* platform/graphics/avfoundation/objc/WebCoreAVFResourceLoader.mm:
(WebCore::DataURLResourceMediaLoader::DataURLResourceMediaLoader):


Canonical link: https://commits.webkit.org/241769@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282609 268f45cc-cd09-0410-ab3c-d52691b4dbfc